Name:          katip-libsystemd-journal
Version:       0.0.0.0
Synopsis:      A Katip scribe for systemd's journal
Description:
  This library provides some bridging code between the Katip logging API and
  systemd's journal service, turning the latter into a target for application
  logs.
Category:      Logging
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/katip-libsystemd-journal
Bug-Reports:   https://github.com/haskell-service/katip-libsystemd-journal/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/katip-libsystemd-journal.git

Library
  Build-Depends:   base >= 4.9 && < 4.11
                 , bytestring >= 0.10 && < 0.11
                 , hsyslog >= 5.0 && < 5.1
                 , katip >= 0.5 && < 0.6
                 , libsystemd-journal >= 1.4 && < 1.5
                 , template-haskell >= 2.11 && < 2.13
                 , text >= 1.2 && < 1.3
                 , unordered-containers >= 0.2 && < 0.3
  Exposed-Modules: Katip.Scribes.Journal
  Hs-Source-Dirs:  src
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g

Benchmark katip-libsystemd-journal-bench
  Type:            exitcode-stdio-1.0
  Build-Depends:   base >= 4.9 && < 4.11
                 , criterion >= 1.1 && < 1.3
                 , deepseq >= 1.4 && < 1.5
                 , katip >= 0.5 && < 0.6
                 , libsystemd-journal >= 1.4 && < 1.5
                 , time >= 1.6 && < 1.9
                 , katip-libsystemd-journal
  Main-Is:         Main.hs
  Hs-Source-Dirs:  bench
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g
