Name:          katip-libsystemd-journal
Version:       0.0.0.0
Synopsis:      A Katip scribe for systemd's journal
Description:
  This library provides some bridging code between the Katip logging API and
  systemd's journal service, turning the latter into a target for application
  logs.
Category:      Logging
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/katip-libsystemd-journal
Bug-Reports:   https://github.com/haskell-service/katip-libsystemd-journal/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/katip-libsystemd-journal.git

Library
  Build-Depends:   base >= 4.9 && < 4.11
                 , bytestring >= 0.10 && < 0.11
                 , hsyslog >= 5.0 && < 5.1
                 , katip >= 0.5 && < 0.6
                 , libsystemd-journal >= 1.4 && < 1.5
                 , template-haskell >= 2.11 && < 2.13
                 , text >= 1.2 && < 1.3
                 , unordered-containers >= 0.2 && < 0.3
  Exposed-Modules: Katip.Scribes.Journal
  Hs-Source-Dirs:  src
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g

Test-Suite katip-libsystemd-journal-test
  Type:            exitcode-stdio-1.0
  Main-Is:         Main.hs
  Build-Depends:   base >= 4.9 && < 4.11
                 , bytestring >= 0.10 && < 0.11
                 , katip >= 0.5 && < 0.6
                 , libsystemd-journal >= 1.4 && < 1.5
                 , pipes >= 4.3 && < 4.4
                 , pipes-safe >= 2.2 && < 2.3
                 , tasty >= 0.11 && < 0.12
                 , tasty-hspec >= 1.1 && < 1.2
                 , tasty-quickcheck >= 0.8 && < 0.10
                 , template-haskell >= 2.11 && < 2.13
                 , text >= 1.2 && < 1.3
                 , time >= 1.6 && < 1.9
                 , unix >= 2.7 && < 2.8
                 , unordered-containers >= 0.2 && < 0.3
                 , katip-libsystemd-journal
  Hs-Source-Dirs:  test
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g -threaded

Benchmark katip-libsystemd-journal-bench
  Type:            exitcode-stdio-1.0
  Build-Depends:   base >= 4.9 && < 4.11
                 , criterion >= 1.1 && < 1.3
                 , deepseq >= 1.4 && < 1.5
                 , katip >= 0.5 && < 0.6
                 , libsystemd-journal >= 1.4 && < 1.5
                 , time >= 1.6 && < 1.9
                 , katip-libsystemd-journal
  Main-Is:         Main.hs
  Hs-Source-Dirs:  bench
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g
