Name:          katip-libsystemd-journal
Version:       0.0.0.0
Synopsis:      A Katip scribe for systemd's journal
Description:
  This library provides some bridging code between the Katip logging API and
  systemd's journal service, turning the latter into a target for application
  logs.
Category:      Logging
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/katip-libsystemd-journal
Bug-Reports:   https://github.com/haskell-service/katip-libsystemd-journal/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/katip-libsystemd-journal.git

Library
  Build-Depends:   aeson
                 , base
                 , bytestring
                 , hsyslog
                 , katip < 0.8
                 , libsystemd-journal
                 , template-haskell
                 , text
                 , unordered-containers
  Exposed-Modules: Katip.Scribes.Journal
  Hs-Source-Dirs:  src
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g

Test-Suite katip-libsystemd-journal-test
  Type:            exitcode-stdio-1.0
  Main-Is:         Main.hs
  Build-Depends:   base
                 , bytestring
                 , katip < 0.8
                 , libsystemd-journal
                 , pipes
                 , pipes-safe
                 , tasty
                 , tasty-hspec
                 , tasty-quickcheck
                 , template-haskell
                 , text
                 , time
                 , unix
                 , unordered-containers
                 , katip-libsystemd-journal
  Hs-Source-Dirs:  test
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g -threaded

Benchmark katip-libsystemd-journal-bench
  Type:            exitcode-stdio-1.0
  Build-Depends:   base
                 , criterion
                 , deepseq
                 , katip < 0.8
                 , libsystemd-journal
                 , time
                 , katip-libsystemd-journal
  Main-Is:         Main.hs
  Hs-Source-Dirs:  bench
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g
